add Simple Analyics

--- a/index.html
+++ b/index.html
@@ -126,5 +126,7 @@
     <script src="js/filters.js?v=3"></script>
     <script src="js/tooltip.js?v=3"></script>
     <script src="js/main.js?v=3"></script>
+    <!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
