--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin="">
 
-    <!-- Application CSS (v5 - cache bust) -->
-    <link rel="stylesheet" href="css/main.css?v=5">
-    <link rel="stylesheet" href="css/map.css?v=5">
+    <!-- Application CSS (v6 - cache bust) -->
+    <link rel="stylesheet" href="css/main.css?v=6">
+    <link rel="stylesheet" href="css/map.css?v=6">
 </head>
 <body>
     <div class="app-container">
@@ -26,8 +26,19 @@
         <main class="main-content">
             <!-- Controls Panel -->
             <aside class="controls-panel">
-                <!-- Tab Buttons -->
-                <div class="tab-buttons">
+                <!-- Mobile collapse header (hidden on desktop) -->
+                <div class="mobile-controls-header">
+                    <button class="collapse-toggle" aria-expanded="true">
+                        <span class="collapse-icon">▲</span>
+                        <span>Filters</span>
+                    </button>
+                    <span class="controls-summary"></span>
+                </div>
+
+                <!-- Collapsible content wrapper -->
+                <div class="controls-content">
+                    <!-- Tab Buttons -->
+                    <div class="tab-buttons">
                     <button class="tab-btn active" data-tab="price">Price View</button>
                     <button class="tab-btn" data-tab="change">Change View</button>
                 </div>
@@ -160,6 +171,7 @@
                         </div>
                     </div>
                 </div>
+                </div><!-- /.controls-content -->
 
                 <!-- Data Info -->
                 <div class="data-info">
@@ -206,14 +218,14 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
 
-    <!-- Application JS (v5 - cache bust) -->
-    <script src="js/data-loader.js?v=5"></script>
-    <script src="js/map.js?v=5"></script>
-    <script src="js/heatmap.js?v=5"></script>
-    <script src="js/filters.js?v=5"></script>
-    <script src="js/tabs.js?v=5"></script>
-    <script src="js/tooltip.js?v=5"></script>
-    <script src="js/main.js?v=5"></script>
+    <!-- Application JS (v6 - cache bust) -->
+    <script src="js/data-loader.js?v=6"></script>
+    <script src="js/map.js?v=6"></script>
+    <script src="js/heatmap.js?v=6"></script>
+    <script src="js/filters.js?v=6"></script>
+    <script src="js/tabs.js?v=6"></script>
+    <script src="js/tooltip.js?v=6"></script>
+    <script src="js/main.js?v=6"></script>
     <!-- 100% privacy-first analytics -->
 <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
