--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin="">
 
-    <!-- Application CSS (v6 - cache bust) -->
-    <link rel="stylesheet" href="css/main.css?v=6">
-    <link rel="stylesheet" href="css/map.css?v=6">
+    <!-- Application CSS (v7 - cache bust) -->
+    <link rel="stylesheet" href="css/main.css?v=7">
+    <link rel="stylesheet" href="css/map.css?v=7">
 </head>
 <body>
     <div class="app-container">
@@ -26,15 +26,6 @@
         <main class="main-content">
             <!-- Controls Panel -->
             <aside class="controls-panel">
-                <!-- Mobile collapse header (hidden on desktop) -->
-                <div class="mobile-controls-header">
-                    <button class="collapse-toggle" aria-expanded="true">
-                        <span class="collapse-icon">▲</span>
-                        <span>Filters</span>
-                    </button>
-                    <span class="controls-summary"></span>
-                </div>
-
                 <!-- Collapsible content wrapper -->
                 <div class="controls-content">
                     <!-- Tab Buttons -->
@@ -173,6 +164,15 @@
                 </div>
                 </div><!-- /.controls-content -->
 
+                <!-- Mobile collapse handle (hidden on desktop) -->
+                <div class="mobile-controls-handle">
+                    <button class="collapse-toggle" aria-expanded="true">
+                        <span class="collapse-icon">▼</span>
+                        <span class="handle-label">Hide Filters</span>
+                        <span class="controls-summary"></span>
+                    </button>
+                </div>
+
                 <!-- Data Info -->
                 <div class="data-info">
                     <p>Data source: <a href="https://www.gov.uk/government/statistical-data-sets/price-paid-data-downloads" target="_blank" rel="noopener">UK Land Registry</a></p>
@@ -218,14 +218,14 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
 
-    <!-- Application JS (v6 - cache bust) -->
-    <script src="js/data-loader.js?v=6"></script>
-    <script src="js/map.js?v=6"></script>
-    <script src="js/heatmap.js?v=6"></script>
-    <script src="js/filters.js?v=6"></script>
-    <script src="js/tabs.js?v=6"></script>
-    <script src="js/tooltip.js?v=6"></script>
-    <script src="js/main.js?v=6"></script>
+    <!-- Application JS (v7 - cache bust) -->
+    <script src="js/data-loader.js?v=7"></script>
+    <script src="js/map.js?v=7"></script>
+    <script src="js/heatmap.js?v=7"></script>
+    <script src="js/filters.js?v=7"></script>
+    <script src="js/tabs.js?v=7"></script>
+    <script src="js/tooltip.js?v=7"></script>
+    <script src="js/main.js?v=7"></script>
     <!-- 100% privacy-first analytics -->
 <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
