improve mobile experience

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin="">
 
-    <!-- Application CSS (v7 - cache bust) -->
-    <link rel="stylesheet" href="css/main.css?v=7">
-    <link rel="stylesheet" href="css/map.css?v=7">
+    <!-- Application CSS (v8 - cache bust) -->
+    <link rel="stylesheet" href="css/main.css?v=8">
+    <link rel="stylesheet" href="css/map.css?v=8">
 </head>
 <body>
     <div class="app-container">
@@ -167,7 +167,7 @@
                 <!-- Mobile collapse handle (hidden on desktop) -->
                 <div class="mobile-controls-handle">
                     <button class="collapse-toggle" aria-expanded="true">
-                        <span class="collapse-icon">▼</span>
+                        <span class="collapse-icon">▲</span>
                         <span class="handle-label">Hide Filters</span>
                         <span class="controls-summary"></span>
                     </button>
@@ -218,14 +218,14 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
 
-    <!-- Application JS (v7 - cache bust) -->
-    <script src="js/data-loader.js?v=7"></script>
-    <script src="js/map.js?v=7"></script>
-    <script src="js/heatmap.js?v=7"></script>
-    <script src="js/filters.js?v=7"></script>
-    <script src="js/tabs.js?v=7"></script>
-    <script src="js/tooltip.js?v=7"></script>
-    <script src="js/main.js?v=7"></script>
+    <!-- Application JS (v8 - cache bust) -->
+    <script src="js/data-loader.js?v=8"></script>
+    <script src="js/map.js?v=8"></script>
+    <script src="js/heatmap.js?v=8"></script>
+    <script src="js/filters.js?v=8"></script>
+    <script src="js/tabs.js?v=8"></script>
+    <script src="js/tooltip.js?v=8"></script>
+    <script src="js/main.js?v=8"></script>
     <!-- 100% privacy-first analytics -->
 <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
