add buymeacoffee link

--- a/public/index.html
+++ b/public/index.html
@@ -224,6 +224,9 @@
                 <span class="tooltip-value transaction-count"></span>
             </div>
         </div>
+        <div class="tooltip-footer">
+            <a href="https://buymeacoffee.com/rowanajmarshall" target="_blank" rel="noopener">Find this useful? Buy me a coffee ☕</a>
+        </div>
     </div>
 
     <!-- Leaflet JS -->
